kubernetes/parked/smarthome-apps/frigate-vision/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://soulwhisper.github.io/k8s-schemas/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: frigate-vision-egress
spec:
  endpointSelector:
    matchLabels:
      "app.kubernetes.io/name": frigate-vision
  egress:
    # frigate events API (enrichment lookup for description updates)
    - toServices:
        - k8sService:
            serviceName: frigate
            namespace: smarthome-apps
      toPorts:
        - ports:
            - { port: "5000", protocol: TCP }
    # MQTT description updates
    - toServices:
        - k8sService:
            serviceName: mosquitto
            namespace: smarthome-apps
      toPorts:
        - ports:
            - { port: "1883", protocol: TCP }
    # hermes webhook (ops profile alerts)
    - toServices:
        - k8sService:
            serviceName: hermes-agent
            namespace: servitor-apps
      toPorts:
        - ports:
            - { port: "8644", protocol: TCP }
    # DNS
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - { port: "53", protocol: TCP }
            - { port: "53", protocol: UDP }
